--- a/K8S/ingress-controller.yml
+++ b/K8S/ingress-controller.yml
@@ -1,12 +1,9 @@
 apiVersion: approuting.kubernetes.azure.com/v1alpha1
 kind: NginxIngressController
 metadata:
-  name: nginx-internal-static
+  name: nginx-internal
 spec:
-  ingressClassName: nginx-internal-static
-  controllerNamePrefix: nginx-internal-static
+  ingressClassName: nginx-internal
+  controllerNamePrefix: nginx-internal
   loadBalancerAnnotations: 
     service.beta.kubernetes.io/azure-load-balancer-internal: "true"
-    service.beta.kubernetes.io/azure-load-balancer-ipv4: "10.0.0.250"
-
-
